Integración de Módulo de farmacia y laboratorio pendiente.